# chi23-papers

./: README.md  acm.bib  app.py  convert.py  pyproject.toml
CHI23/: bibliography.feather
src/: generate_summary_v1.py  generate_summary_v2.py  util.py
